# Terrain_Mapping_Rover_V1

./: 00_START_HERE.md  00_START_HERE_UPDATED.md  01_ROVER_MSGS.md  02_VEX_DRIVER.md  02_VEX_DRIVER_WITH_PROS_CODE.md  03_IMU_DRIVER.md  03a_PACKAGE_OVERVIEW.md  03a_PACKAGE_OVERVIEW_IMPROVED (1).md  03a_PACKAGE_OVERVIEW_IMPROVED.md  04_CAMERA_AND_TOF_DRIVERS.md  04_CAMERA_DRIVERS_UPDATED.md  05_STATIC_TF_PUBLISHER.md  06_EKF_FUSION_NODE.md  06_LAUNCH_FILES.md  06_LAUNCH_FILES_CORRECTED (1).md  06_LAUNCH_FILES_UPDATED.md  06_LAUNCH_FILES_UPDATED_WITH_SERIAL (1).md  07_BUILD_PROCEDURES.md  07_BUILD_PROCEDURES_UPDATED.md  07_BUILD_PROCEDURES_UPDATED_WITH_PROS (1).md  07_PERCEPTION_NODES.md  08_LOCALIZATION_NODES.md  09_NAVIGATION_NODES.md  11_CONFIGURATION_REFERENCE.md  BUILD_GUIDE.md  BUILD_LAUNCH_COMPLETE_UPDATE.md  COMPLETE_BUILD_LAUNCH_STATUS.txt  COMPLETE_BUILD_LAUNCH_STATUS_UPDATED (1).txt  COMPLETE_FILE_LISTING.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY_UPDATED.md  DELIVERY_COMPLETE_SUMMARY.md  DOWNLOAD_LIST_ALL_FILES.md  Documentation.md  FINAL_UPDATE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MISSING_DOCS_NOW_DELIVERED.md  QUICK_REFERENCE.md  README.md  ROS_to_VEX_serial.md  (+199 more)
terrain_mapping_rover_ws/src/arducam_tof/: CMakeLists.txt  package.xml  src_arducam_tof_CMakeLists_Version2_.txt  src_arducam_tof_scripts_arducam_tof_node_Version2_.txt  src_arducam_tof_scripts_depth_to_pointcloud_node_Version2.py  src_arducam_tof_scripts_tof_mock_node_Version2.py
terrain_mapping_rover_ws/src/arducam_tof/arducam_tof/: __init__.py  pointcloud_generator.py  src_arducam_tof_arducam_tof_pointcloud_generator_Version2.py  src_arducam_tof_arducam_tof_tof_driver_Version2.py  tof_driver.py
terrain_mapping_rover_ws/src/arducam_tof/config/: arducam_tof_params.yaml
terrain_mapping_rover_ws/src/arducam_tof/launch/: tof.py
terrain_mapping_rover_ws/src/arducam_tof/scripts/: arducam_tof_node.py  depth_to_pointcloud_node.py  src_arducam_tof_config_arducam_tof_params_Version2.yaml  src_arducam_tof_launch_tof_Version2_.txt  tof_mock_node.py
terrain_mapping_rover_ws/src/imu_driver/: CMakeLists.txt  package.xml  src_imu_driver_CMakeLists_Version2.txt
terrain_mapping_rover_ws/src/imu_driver/config/: mpu6050_params.yaml
terrain_mapping_rover_ws/src/imu_driver/imu_driver/: __init__.py  imu_filter.py  mpu6050_driver.py  src_imu_driver_imu_driver_imu_filter_Version2.py  src_imu_driver_imu_driver_mpu6050_driver_Version2_.txt
terrain_mapping_rover_ws/src/imu_driver/launch/: imu.py
terrain_mapping_rover_ws/src/imu_driver/scripts/: imu_mock_node.py  mpu6050_node.py  src_imu_driver_scripts_imu_mock_node_Version2.py
terrain_mapping_rover_ws/src/rover_teleop/: CMakeLists.txt  package.xml
terrain_mapping_rover_ws/src/rover_teleop/config/: teleop_params.yaml
terrain_mapping_rover_ws/src/rover_teleop/launch/: teleop.py
terrain_mapping_rover_ws/src/rover_teleop/rover_teleop/: ___init___.py
terrain_mapping_rover_ws/src/rover_teleop/scripts/: keyboard_teleop_node.py  tank_teleop_node.py
terrain_mapping_rover_ws/src/tmr_bringup/: CMakeLists.txt  package.xml
terrain_mapping_rover_ws/src/tmr_bringup/config/: phase1_params.yaml  phase2_params.yaml  phase3_params.yaml
terrain_mapping_rover_ws/src/tmr_bringup/docs/: PHASE1_CHECKLIST.md  PHASE1_TESTING_PROCEDURE.md  PHASE1_TROUBLESHOOTING.md  PHASE2_CHECKLIST.md  PHASE2_TESTING_PROCEDURE.md  PHASE3_CHECKLIST.md  PHASE3_TESTING_PROCEDURE.md
terrain_mapping_rover_ws/src/tmr_bringup/launch/: full_localization.launch.py  phase1_bringup.launch.py  phase1_sensors.launch.py  phase1_teleop.launch.py  phase1_test.launch.py  phase2_bringup.launch.py  phase2_tf_test.launch.py  phase3_bringup.launch.py  phase3_ekf_test.launch.py
terrain_mapping_rover_ws/src/tmr_bringup/scripts/: phase1_calibration.py  phase1_health_monitor.py  phase1_integration_test.py  phase1_motor_test.py  phase1_quick_test.py  phase1_record_baseline.py  phase1_sensor_test.py  phase1_system_check.py  phase2_tf_check.py  phase2_transform_test.py  phase3_ekf_check.py  phase3_fusion_test.py  phase3_integration_test.py  phase3_odom_test.py
terrain_mapping_rover_ws/src/tmr_bringup/test/: test_camera.py  test_imu.py  test_odometry.py  test_phase2_tf.py  test_phase3_ekf.py  test_teleop.py  test_tof.py  test_vex_connection.py
terrain_mapping_rover_ws/src/tmr_costmap/: CMakeLists.txt  package.xml
terrain_mapping_rover_ws/src/tmr_costmap/config/: nav2_params.yaml  terrain_layer_params.yaml
terrain_mapping_rover_ws/src/tmr_costmap/docs/: NAV2_INTEGRATION.md  TERRAIN_LAYER_DESIGN.md
terrain_mapping_rover_ws/src/tmr_costmap/launch/: costmap_test.launch.py  navigation.launch.py  terrain_layer_test.launch.py
terrain_mapping_rover_ws/src/tmr_costmap/plugins/: costmap_plugins.xml
terrain_mapping_rover_ws/src/tmr_costmap/rviz/: nav2_costmap.rviz
terrain_mapping_rover_ws/src/tmr_costmap/scripts/: costmap_diagnostics.py  terrain_visualizer.py  test_terrain_layer.py
terrain_mapping_rover_ws/src/tmr_costmap/src/: point_cloud_processor.cpp  terrain_classifier.cpp  tof_terrain_layer.cpp
terrain_mapping_rover_ws/src/tmr_costmap/test/: test_terrain_classifier.cpp
terrain_mapping_rover_ws/src/tmr_description/: CMakeLists.txt  package.xml  urdf_rover.urdf.xacro
terrain_mapping_rover_ws/src/tmr_description/config/: sensor_calibration.yaml  tf_params.yaml  tf_test.rviz
terrain_mapping_rover_ws/src/tmr_description/docs/: TF_TREE.md
terrain_mapping_rover_ws/src/tmr_description/launch/: calibration.launch.py  description.launch.py  tf_test.launch.py
terrain_mapping_rover_ws/src/tmr_description/scripts/: calibration_helper.py  tf_monitor.py  tf_validator.py
terrain_mapping_rover_ws/src/tmr_description/urdf/: materials.xacro  rover.urdf.xacro  rover_base.urdf.xacro  sensors.xacro  (+2 more)
terrain_mapping_rover_ws/src/tmr_imu_driver/: package.xml  setup.cfg  setup.py
terrain_mapping_rover_ws/src/tmr_localization/: CMakeLists.txt  package.xml
terrain_mapping_rover_ws/src/tmr_msgs/: CMakeLists.txt  package.xml
terrain_mapping_rover_ws/src/tmr_vex_serial/: CMakeLists.txt  package.xml
(+375 files in other folders)
