cmake_minimum_required(VERSION 3.8)
project(imu_driver)

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install Python executables
install(PROGRAMS
  scripts/mpu6050_node.py
  scripts/imu_mock_node.py
  DESTINATION lib/${PROJECT_NAME}
)

# Install launch and config
install(DIRECTORY
  launch
  config
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
