<?xml version="1.0"?>
<? xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_driver</name>
  <version>1.0.0</version>
  <description>MPU6050 IMU driver for ROS 2</description>
  <maintainer email="balamahendrareddybhi@gmail.com">Bala</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-smbus2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
