<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmr_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configurations for Terrain Mapping Rover</description>
  <maintainer email="user@todo.todo">Bala</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tmr_msgs</exec_depend>
  <exec_depend>tmr_description</exec_depend>
  <exec_depend>tmr_vex_serial</exec_depend>
  <exec_depend>tmr_imu_driver</exec_depend>
  <exec_depend>tmr_camera</exec_depend>
  <exec_depend>tmr_tof_camera</exec_depend>
  <exec_depend>tmr_ekf</exec_depend>
  <exec_depend>tmr_slam</exec_depend>
  <exec_depend>tmr_navigation</exec_depend>
  <exec_depend>tmr_terrain_layer</exec_depend>
  <exec_depend>tmr_auto_exposure</exec_depend>
  <exec_depend>tmr_classification</exec_depend>
  <exec_depend>tmr_mission_health</exec_depend>
  <exec_depend>tmr_waypoint</exec_depend>
  <exec_depend>tmr_landmark</exec_depend>
  <exec_depend>tmr_bluetooth_nav</exec_depend>
  <exec_depend>tmr_cross_rover_sync</exec_depend>
  <exec_depend>tmr_streaming</exec_depend>
  <exec_depend>tmr_teleop</exec_depend>
  <exec_depend>tmr_web_dashboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
