<? xml version="1.0"?>
<? xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmr_bringup</name>
  <version>1.0.0</version>
  <description>Bringup and testing package for Terrain Mapping Rover</description>
  <maintainer email="user@todo.todo">Bala</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- TMR packages -->
  <exec_depend>tmr_description</exec_depend>
  <exec_depend>tmr_vex_serial</exec_depend>
  <exec_depend>tmr_imu_driver</exec_depend>
  <exec_depend>tmr_camera</exec_depend>
  <exec_depend>tmr_tof_camera</exec_depend>
  <exec_depend>tmr_teleop</exec_depend>

  <!-- ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
