<?xml version="1.0"?>
<? xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tmr_localization</name>
  <version>1.0.0</version>
  <description>Localization and sensor fusion package for Terrain Mapping Rover using robot_localization EKF</description>
  <maintainer email="user@todo.todo">Bala</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- robot_localization for EKF -->
  <depend>robot_localization</depend>

  <!-- Diagnostics -->
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- TMR packages -->
  <exec_depend>tmr_description</exec_depend>
  <exec_depend>tmr_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
